# jobs

./: README.md  pyproject.toml
src/jobs/: __init__.py  __main__.py  fetch_webpage.py
